--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "bootcamp",
+  "name": "air-quality",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://artembaranovsky.github.io/air-quality/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -11,13 +12,15 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
-    "swiper": "^6.3.1"
+    "swiper": "^6.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts docs",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d docs"
   },
   "eslintConfig": {
     "extends": "react-app"
